--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/heros/_type-e.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/heros/_type-e.scss
@@ -16,34 +16,25 @@
 .nu_pattern-is_hero--is_type_e {
 
 
-	// the first spillover part
-	> .wp-block-group:last-of-type {
-		max-width: 80%;
-		margin: 0 auto;
-		position: relative;
+	.cover_tucks_next_block {
 
-		// 
-		> .wp-block-cover.cover_tucks_next_block {
-			// margin-bottom: 0;
+		.wp-block-cover__inner-container {
 			padding-bottom: $margin_8x;
-			+ .wp-block-group .wp-block-buttons {
-				width: 100%;
-				max-width: 80%;
-				flex-flow: row nowrap;
-				position: absolute;
-				bottom: 0;
-				left: 50%;
-				transform: translate(-50%, 50%);
-
-				.wp-block-button {
-					flex: 1 1 100%;
-				}
-			}
 		}
+
 	}
 	
-	.wp-block-cover.alignfull.has-background-dim-30.has-black-background-color.has-background-dim.cover_tucks_next_block > .wp-block-cover__inner-container {
-		margin-bottom: $base-margin * 3; 
+	> .wp-block-cover:first-child {
+
+
 	}
+
+	> .wp-block-group:last-child {
+
+	}
+
+
+	
+	
 
 }
