fix bugs with hhas-background

--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/_index.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/_index.scss
@@ -6,8 +6,10 @@
 
 
 .has-background {
-	padding: $margin_2x;
-	@media screen and (max-width: 781px) {
-		padding: $base-margin;
+	&:not(hr){
+		padding: $margin_2x;
+		@media screen and (max-width: 781px) {
+			padding: $base-margin;
+		}
 	}
 }
