misc touchups and schema for theme.json
nice schema added to themejson
misc updates; been workin on brand not so sure about whats here

--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/blocks/_paragraph.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/blocks/_paragraph.scss
@@ -6,8 +6,7 @@ p {
 	a {
 		border-bottom: 2px solid transparent;
 		&:hover,
-		&:focus,
-		&:active {
+		&:focus {
 			border-bottom: 2px solid currentColor;
 		}
 	}
