--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/blocks/_group.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/blocks/_group.scss
@@ -3,36 +3,39 @@
 */
 
 .wp-block-group {
-	&.is-style-card-outlined {
-		border: 1px solid $grey_4;
-		padding: $margin_2x;
 
-		// ? tuck over the padding, flush with top and side edges
-		.wp-block-image.size-full {
-			position: relative;
-			top: -$margin_2x;
-			left: -$margin_2x;
-			width: calc(100% + #{$margin_4x});
-			max-width: calc(100% + #{$margin_4x});
-		}
+	// ? generally speaking, inner-blocks push from the top by a reduced margin compared to ungrouped blocks
+	> * {
+		margin-top: $margin_2x;
+	}
+
+	// ? typographical elements should push down by even less
+	> p, .wp-block-paragraph {
+		margin-top: $half-margin;
+	}
+
+	// ? first child should be flush with the top edge of the group
+	> :first-child {
+		margin-top: 0;
+	}
+	// ? last child should be flush with the bottom edge of the group
+	> :last-child {
+		margin-bottom: 0;
 	}
 }
 
 
-// ? top-level group is like the base-blocks-container; just half the vertical margin
-.blocks--wrapper > .wp-block-group {
-	> * {
-		&:not(p, .wp-block-paragraph){
-			margin: $margin_4x auto 0 auto;
-			@media screen and (max-width: 640px) {
-				margin: $margin_2x auto 0 auto;
-			}
-		}
-		&:first-child {
-			margin-top: 0;
-		}
-		&:last-child {
-			margin-bottom: 0;
-		}
+// * the "card style" adds a border and padding; and some inner content behaves differently
+.wp-block-group.is-style-card-outlined {
+	border: 1px solid $grey_4;
+	padding: $margin_2x;
+
+	// ? tuck over the padding, flush with top and side edges
+	.wp-block-image.size-full {
+		position: relative;
+		top: -$margin_2x;
+		left: -$margin_2x;
+		width: calc(100% + #{$margin_4x});
+		max-width: calc(100% + #{$margin_4x});
 	}
 }
