--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/features/_type-c.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/features/_type-c.scss
@@ -12,113 +12,46 @@
 	
 */
 
-//
-.nu_pattern-is_feature--is_type_c {
 
-	// removes a clearfix from wp core
-	&:after {
-		display: none;
+// ? traversal and selection with a little extra specificity
+.wp-block-group.nu_pattern-is_feature--is_type_c {
+
+	// ? adjust the arrow into a chevron
+	.is-style-links-have-arrows {
+		margin: 0;
+		a {
+			&:after {
+				content: "\e5cc";
+				font-size: var(--wp--preset--font-size--larger);
+			}
+		}
 	}
-	// general layout adjustment
-	> * {
-		margin-top: $margin_2x;
+
+	// ? if has background; use custom spacing values
+	&.has-background {
+		padding: $margin_4x;
+		@media screen and (max-width: 781px) {
+			padding: $margin_2x $base-margin;
+		}
+	}
+
+	// ? clean up some of the hanging margins
+	.wp-block-image:only-child {
 		margin-bottom: 0;
-		&:first-child {
-			margin-top: 0;
-		}
 	}
 
-	// the intro blurb is in a group
-	> .wp-block-group {
-		> * {
-			margin: ($base-margin * 0.5) 0 0 0;
-		}
-		&:after {
-			display: none;
-		}
-	}
 
-	.wp-block-column {
-		p.has-larger-font-size {
-			&:first-child {
-				margin-top: 0;
-				margin-bottom: 0;
-			}
-		}
-		p:last-child {
-			margin-bottom: 0;
-		}
-
-		.wp-block-image {
-			&:only-child {
-				margin-bottom: 0;
-			}
-		}
-	}
-
-	// break way early and fix layout
-	@media screen and (max-width: 1024px) {
-		> .wp-block-columns {
-			flex-flow: column nowrap;
-			&:last-child {
-				margin-top: 0;
-			}
-
-			> .wp-block-column {
-				&:last-child {
-					margin-left: 0;
-				}
-
-				> .wp-block-columns {
-					flex-flow: row nowrap !important;
-					.wp-block-column {
-						width: auto; // reset wp-core from having w100%
-						&:first-child {
-							width: 96px; 		// 
-							min-width: 96px;	// why was this 80?
-							flex-basis: auto !important;
-						}
-					}
-				}
-			}
-		}
-	}
-
-	@media (min-width: 600px) and (max-width: 781px) {
-
-
-		.wp-block-columns > .wp-block-column > .wp-block-columns {
-			> .wp-block-column {
-				&:last-child {
-					margin-left: $margin_2x;
-				}
-			}
-		}
+	// ? the intro blurb
+	> .wp-block-group:first-child {
 		
-		.wp-block-group > .wp-block-columns {
-			> .wp-block-column:first-child {
-				margin-right: $margin_2x;
-			}
-		}
+	}
+	
+	// ? the four featured items ( using columns block right now! )
+	> .wp-block-group:last-child {
+
 	}
 
-	@media screen and ( max-width: 640px ){
-		
 
-		// traverse to the nested columns (sort of a media text block replacement)
-		.wp-block-columns > .wp-block-column > .wp-block-columns {
-			flex-flow: column nowrap !important;
-			&:only-child  {
-				margin-bottom: 0;
-			}
-			> .wp-block-column {
-				&:first-child {
-					margin: 0 0 0 0;
-				}
-				&:last-child {
-					margin: $margin_2x 0 0 0;
-				}
-			}
-		}
-	}
+
+
 }
